[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Seminara Luigi <seminara.luigi@gmail.com>"]
description = ""
name = "image-processing"
version = "0.1.0"
[tool.poetry.dependencies]
opencv-python = "^4.2"
python = "^3.7"
[tool.poetry.dev-dependencies]
